k8s-test/gray/gray-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gray-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-cookie: "canary"
spec:
  rules:
    - host: app-ingress.info
      http:
        paths:
        - backend:
            service:
              name: gray-app
              port:
                number: 80
          path: /
          pathType: Prefix
